# news-editor.back

./: .env-example  README.md  docker-compose.yaml  main.py  openapi.json  pyproject.toml
docker/: Dockerfile
scripts/: start.sh
src/domain/core/settings/: __init__.py  app.py  base.py
src/domain/core/tools/: __init__.py  auth.py  secure.py
src/domain/core/types/: __init__.py  enums.py  schemas.py
src/infrastructure/api/routes/v1/: __init__.py  news.py  user.py
src/infrastructure/api/views/v1/: __init__.py  news.py  user.py
src/infrastructure/factories/: base.py
src/infrastructure/factories/resources/: __init__.py  news.py  user.py
src/infrastructure/orm/: base.py
src/infrastructure/orm/db/: core.py
src/infrastructure/orm/db/models/: __init__.py  news.py  user.py
src/infrastructure/orm/db/repositories/: __init__.py  news.py  user.py
src/infrastructure/server/: core.py
src/infrastructure/server/tools/: __init__.py  urls.py
src/infrastructure/settings/: __init__.py  core.py
src/infrastructure/settings/types/: __init__.py  development.py  production.py  test.py
src/interface/: exceptions.py
src/interface/schemas/repositories/: __init__.py  news.py  user.py
src/services/resources/: __init__.py  news.py  user.py
